Library/AXL(Library)/C, C++/AXM.h

// Set acceleration jerk value of specific axis.[%].
DWORD    __stdcall AxmMotSetAccelJerk(long lAxisNo, double dAccelJerk);
// Return acceleration jerk value of specific axis.
DWORD    __stdcall AxmMotGetAccelJerk(long lAxisNo, double *dpAccelJerk);
// Set deceleration jerk value of specific axis.[%].
DWORD    __stdcall AxmMotSetDecelJerk(long lAxisNo, double dDecelJerk);
// Return deceleration jerk value of specific axis.
DWORD    __stdcall AxmMotGetDecelJerk(long lAxisNo, double *dpDecelJerk);
// Setting priority when determining speed profile of specified axis.(Velocity or Acceleration)
// Priority : PRIORITY_VELOCITY   '0' - Calculate close to specified speed value when determining velocity profile.
//            PRIORITY_ACCELTIME  '1' - Calculate close to specified speed value when determining Acceleration / Deceleration time profile.
DWORD    __stdcall AxmMotSetProfilePriority(long lAxisNo, DWORD uPriority);
// Return priority when determining speed profile of specified axis.(Velocity or Acceleration)
DWORD    __stdcall AxmMotGetProfilePriority(long lAxisNo, DWORD *upPriority);
//=========== Setting API related in/output signal ================================================================================

// Set Z phase level of specific axis.
// uLevel : LOW(0), HIGH(1)
DWORD    __stdcall AxmSignalSetZphaseLevel(long lAxisNo, DWORD uLevel);
// Return Z phase level of specific axis.
DWORD    __stdcall AxmSignalGetZphaseLevel(long lAxisNo, DWORD *upLevel);
// Set output level of Servo-On signal of specific axis.
// uLevel : LOW(0), HIGH(1)
DWORD    __stdcall AxmSignalSetServoOnLevel(long lAxisNo, DWORD uLevel);
// Return output level of Servo-On signal of specific axis.
DWORD    __stdcall AxmSignalGetServoOnLevel(long lAxisNo, DWORD *upLevel);
// Set output level of Servo-Alarm Reset signal of specific axis.
// uLevel : LOW(0), HIGH(1)
DWORD    __stdcall AxmSignalSetServoAlarmResetLevel(long lAxisNo, DWORD uLevel);
// Return output level of Servo-Alarm Reset signal of specific axis.
DWORD    __stdcall AxmSignalGetServoAlarmResetLevel(long lAxisNo, DWORD *upLevel);
//    Set whether to use Inposition signal of specific axis and signal input level.
// uLevel : LOW(0), HIGH(1), UNUSED(2), USED(3)
DWORD    __stdcall AxmSignalSetInpos(long lAxisNo, DWORD uUse);
// Return whether to use Inposition signal of specific axis and signal input level.
DWORD    __stdcall AxmSignalGetInpos(long lAxisNo, DWORD *upUse);
// Return inposition signal input mode of specific axis.
DWORD    __stdcall AxmSignalReadInpos(long lAxisNo, DWORD *upStatus);
// Set whether to use emergency stop or not against to alarm signal input and set signal input level of specific axis.
// uLevel : LOW(0), HIGH(1), UNUSED(2), USED(3)
DWORD    __stdcall AxmSignalSetServoAlarm(long lAxisNo, DWORD uUse);
// Return whether to use emergency stop or not against to alarm signal input and set signal input level of specific axis.
DWORD    __stdcall AxmSignalGetServoAlarm(long lAxisNo, DWORD *upUse);
// Return input level of alarm signal of specific axis.
DWORD    __stdcall AxmSignalReadServoAlarm(long lAxisNo, DWORD *upStatus);
// Set whether to use end limit sensor of specific axis and input level of signal.
// Available to set of slow down stop or emergency stop when end limit sensor is input.
// uStopMode: EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
// uPositiveLevel, uNegativeLevel : LOW(0), HIGH(1), UNUSED(2), USED(3)
DWORD    __stdcall AxmSignalSetLimit(long lAxisNo, DWORD uStopMode, DWORD uPositiveLevel, DWORD uNegativeLevel);
// Return whether to use end limit sensor of specific axis , input level of signal and stop mode for signal input.
DWORD    __stdcall AxmSignalGetLimit(long lAxisNo, DWORD *upStopMode, DWORD *upPositiveLevel, DWORD *upNegativeLevel);
// Return the input state of end limit sensor of specific axis.
DWORD    __stdcall AxmSignalReadLimit(long lAxisNo, DWORD *upPositiveStatus, DWORD *upNegativeStatus);
// Set whether to use software limit, count to use and stop method of specific axis.
// uUse       : DISABLE(0), ENABLE(1)
// uStopMode  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
// uSelection : COMMAND(0), ACTUAL(1)
// Caution: When software limit is set in advance by using above API in origin detecting and is moving, if the detecting of origin is stopped during detecting, it becomes DISABLE.
DWORD    __stdcall AxmSignalSetSoftLimit(long lAxisNo, DWORD uUse, DWORD uStopMode, DWORD uSelection, double dPositivePos, double dNegativePos);
// Return whether to use software limit, count to use and stop method of specific axis.
DWORD    __stdcall AxmSignalGetSoftLimit(long lAxisNo, DWORD *upUse, DWORD *upStopMode, DWORD *upSelection, double *dpPositivePos, double *dpNegativePos);
DWORD    __stdcall AxmSignalReadSoftLimit(long lAxisNo, DWORD *upPositiveStatus, DWORD *upNegativeStatus);
// Set the stop method of emergency stop(emergency stop/slowdown stop) ,or whether to use or not.
// uStopMode  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
// uLevel : LOW(0), HIGH(1), UNUSED(2), USED(3)
DWORD    __stdcall AxmSignalSetStop(long lAxisNo, DWORD uStopMode, DWORD uLevel);
// Return the stop method of emergency stop(emergency stop/slowdown stop) ,or whether to use or not.
DWORD    __stdcall AxmSignalGetStop(long lAxisNo, DWORD *upStopMode, DWORD *upLevel);
// Return input state of emergency stop.
DWORD    __stdcall AxmSignalReadStop(long lAxisNo, DWORD *upStatus);
// Output the Servo-On signal of specific axis.
// uOnOff : FALSE(0), TRUE(1) ( The case of universal 0 output)
DWORD    __stdcall AxmSignalServoOn(long lAxisNo, DWORD uOnOff);
// Return the output state of Servo-On signal of specific axis.
DWORD    __stdcall AxmSignalIsServoOn(long lAxisNo, DWORD *upOnOff);
// Output the Servo-Alarm Reset signal of specific axis.
// uOnOff : FALSE(0), TRUE(1) (The case of universal 1 output)
DWORD    __stdcall AxmSignalServoAlarmReset(long lAxisNo, DWORD uOnOff);
//    Set universal output value.
//  uValue : Hex Value 0x00
DWORD    __stdcall AxmSignalWriteOutput(long lAxisNo, DWORD uValue);
// Return universal output value.
DWORD    __stdcall AxmSignalReadOutput(long lAxisNo, DWORD *upValue);
// ML3 Only
// Return Break Sensor Status
DWORD    __stdcall AxmSignalReadBrakeOn(long lAxisNo, DWORD *upOnOff);
// lBitNo : Bit Number(0 - 4)
// uOnOff : FALSE(0), TRUE(1)
// Set universal output values by bit.
DWORD    __stdcall AxmSignalWriteOutputBit(long lAxisNo, long lBitNo, DWORD uOnOff);
// Return universal output values by bit.
DWORD    __stdcall AxmSignalReadOutputBit(long lAxisNo, long lBitNo, DWORD *upOnOff);
// Return universal input value in Hex value.
DWORD    __stdcall AxmSignalReadInput(long lAxisNo, DWORD *upValue);
// lBitNo : Bit Number(0 - 4)
// Return universal input value by bit.
DWORD    __stdcall AxmSignalReadInputBit(long lAxisNo, long lBitNo, DWORD *upOn);
// Set universal In/Out digital filter coefficient.
// uSignal: END_LIMIT(0), INP_ALARM(1), UIN_00_01(2), UIN_02_04(3)
// dBandwidthUsec: 0.2uSec~26666usec
DWORD    __stdcall AxmSignalSetFilterBandwidth(long lAxisNo, DWORD uSignal, double dBandwidthUsec);
//========== API which verifies the state during motion moving and after moving. ============================================================
// Return number of bits of general purpose input.
DWORD   __stdcall AxmSignalGetInputBitCount(long lAxisNo, DWORD* upInputCount);
// Return number of bits of general purpose output.
DWORD   __stdcall AxmSignalGetOutputBitCount(long lAxisNo, DWORD* upOutputCount);
//========== API for checking status during or after motion. ==============================================================
// Return pulse output status of specified axis.(In motion state)
DWORD    __stdcall AxmStatusReadInMotion(long lAxisNo, DWORD *upStatus);
//  Return move pulse counter value of specific axis after start of move.
//  (pulse count value)"
DWORD    __stdcall AxmStatusReadDrivePulseCount(long lAxisNo, long *lpPulse);
// Return DriveStatus register (status of in-motion) of specific Axis.
// Caution: All Motion Product is different Hardware bit signal. Let's refer Manual and AXHS.xxx
DWORD    __stdcall AxmStatusReadMotion(long lAxisNo, DWORD *upStatus);
// Return EndStatus(status of stop) register of specific axis.
// Caution: All Motion Product is different Hardware bit signal. Let's refer Manual and AXHS.xxx
DWORD    __stdcall AxmStatusReadStop(long lAxisNo, DWORD *upStatus);
// Return Mechanical Signal Data(Current mechanical signal status)of specific axis.
// Caution: All Motion Product is different Hardware bit signal. Let's refer Manual and AXHS.xxx
DWORD    __stdcall AxmStatusReadMechanical(long lAxisNo, DWORD *upStatus);
// Read current move velocity oo specific axis.
DWORD    __stdcall AxmStatusReadVel(long lAxisNo, double *dpVel);
// Return the error between Command Pos and Actual Pos of specific axis.
DWORD    __stdcall AxmStatusReadPosError(long lAxisNo, double *dpError);
// Verify the travel(traveled) distance to the final drive.
DWORD    __stdcall AxmStatusReadDriveDistance(long lAxisNo, double *dpUnit);